--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     "require": {
         "php": "^7.1|^8.0",
         "illuminate/database": "^7.0|^8.0|^9.0",
-        "illuminate/support": "^7.0|^8.0|^9.0",
+        "illuminate/support": "^7.0|^8.0|^9.0|^10.0",
+        "laravel/framework": "^10.0"
         "laravel/helpers": "^1.0"
     },
     "license": "MIT",
